examples/bad/hold_continue_next_iter.mko
// Must fail: move + `continue`, then a later iteration uses the hold.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    let mut i = 0
    while i < 3 {
        i = i + 1
        if i == 1 {
            consume(s)
            continue
        }
        if i == 2 {
            print(s)
        }
    }
}
